--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /.DS_Store
 /images/.DS_Store
+/images/customer-logos/.DS_Store
+/images/customer-logos/en-US/.DS_Store
+/images/customer-logos/fr/.DS_Store
